# SwingTrader

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  crash-bounce-playground.html  pyproject.toml  spec-kit-team-playbook.md  swingtrader-scanner-playground.html
.claude/: learnings.md  settings.json
.claude/hooks/: validate-and-learn.sh
.specify/memory/: constitution.md
research/strategy-and-theory/: 00-research-map-and-sources.md  01-swing-trading-fundamentals.md  02-technical-indicators.md  03-chart-patterns.md  04-swing-trading-strategies.md  05-risk-management.md  06-apis-and-technology.md  07-backtesting-and-performance.md  08-market-structure-and-conditions.md  09-regulation-tax-and-trade-operations.md  10-empirical-evidence-and-edge-quality.md  11-candlestick-interpretation.md  12-candlestick-examples-and-scenarios.md  13-trading-plan-and-daily-routine.md  14-trade-management.md  15-options-for-swing-trading.md  16-stock-screening-playbook.md  17-trading-journal-framework.md  18-correlation-and-portfolio-construction.md  19-algorithmic-swing-trading.md  20-common-mistakes-and-case-studies.md  21-catalyst-and-event-playbook.md  22-watchlist-and-universe-selection.md  23-setup-quality-scoring.md  24-execution-and-slippage-playbook.md  25-regime-to-strategy-mapping.md  26-latest-research-update-and-evidence-review.md  27-swedish-market-adaptation.md  28-trading-psychology-and-behavioral-discipline.md  29-position-scaling-and-pyramiding.md  30-sector-rotation-and-economic-cycles.md  31-gap-trading-strategies.md  (+1 more)
scripts/: daily-scan.sh
tests/: test_scanner.py
(+68 files in other folders)
