[project]
name = "swingtrader"
version = "0.1.0"
description = "Swing trading signal scanner for Nasdaq Stockholm Large Cap"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.1.0",
    "ta>=0.11.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
ibkr = [
    "ib_async>=1.0.0",
]

[project.scripts]
swingtrader = "swingtrader.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
